<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <Spinner
                    android:id="@+id/spinnerDevice"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/roundedbutton_border"
                    android:entries="@array/cameras_arrays"
                    android:paddingLeft="10dp" />

                <Spinner
                    android:id="@+id/spinnerPlan"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/roundedbutton_border"
                    android:entries="@array/plan_arrays"
                    android:paddingLeft="10dp" />

                <EditText
                    android:id="@+id/covering"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/roundedbutton_border"
                    android:hint="Covering (%)"
                    android:inputType="number"
                    android:paddingLeft="20dp" />

                <EditText
                    android:id="@+id/altitude"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/roundedbutton_border"
                    android:hint="Altitude (m)"
                    android:inputType="number"
                    android:paddingLeft="20dp" />

                <Button
                    android:id="@+id/compute"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/rounded_orange"

                    android:text="Compute"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="25dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="40dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/captor"
                            android:layout_width="0dp"
                            android:layout_height="110dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/roundedbutton"
                            android:paddingTop="10dp"
                            android:paddingLeft="10dp"
                            android:text="@string/captor" />

                        <TextView
                            android:id="@+id/ground_image"
                            android:layout_width="0dp"
                            android:layout_height="110dp"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/roundedbutton"
                            android:paddingTop="10dp"
                            android:paddingLeft="10dp"
                            android:text="@string/ground_image" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="40dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/pix_size"
                            android:layout_width="0dp"
                            android:layout_height="55dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/roundedbutton"
                            android:paddingTop="10dp"
                            android:paddingLeft="10dp"
                            android:text="@string/pix_size" />

                        <TextView
                            android:id="@+id/ground_pix_size"
                            android:layout_width="0dp"
                            android:layout_height="55dp"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/roundedbutton"
                            android:paddingTop="10dp"
                            android:paddingLeft="10dp"
                            android:text="@string/ground_pixel_size" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/focal"
                            android:layout_width="0dp"
                            android:layout_height="110dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/roundedbutton"
                            android:paddingTop="10dp"
                            android:paddingLeft="10dp"
                            android:text="@string/focal" />

                        <TextView
                            android:id="@+id/none"
                            android:layout_width="0dp"
                            android:layout_height="80dp"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:paddingTop="10dp"
                            android:paddingLeft="10dp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>